<resources>
    <string name="app_name">pizzaOrderingApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_order">Add Order</string>
    <string name="submit">Submit</string>
    <string name="margherita">Margherita</string>
    <string name="mushroom">Mushroom</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="price">Price: %s $</string>
    <string name="refresh">Refresh</string>
    <string name="clear">Clear</string>
</resources>