<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/layout_padding"
    tools:context=".OrderListActivity">

    <TextView
        android:id="@+id/orderList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear" />

    <Button
        android:id="@+id/refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/refresh" />

    <Button
        android:id="@+id/addOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_order" />
</LinearLayout>